cursive-bootstrap/tests/ui/E-TYP/E-TYP-2063.cursive
// RUN: compile-fail
// DIAG: E-TYP-2063
// SPEC: 5.4
// DESC: State member visibility exceeds modal visibility

modal Connection {
    @Open {
        public procedure send(~) -> () { } //~ ERROR E-TYP-2063
    }
    @Closed { }
}

public procedure main(move ctx: Context) -> i32 {
    return 0
}
